# GOIT_web_project

./: .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  index.rst  main.py  pyproject.toml  qr_code.py  requirements.txt  routes.py  schemas.py  seeds.py
alembic/: env.py
alembic/versions/: 2de1c760ccdf_initial.py  359546f9ae42_qrcode_v4.py  412c1fbac635_tyctyc.py  4e555941e5d7_tyctyc_2.py  52d08103ee1b_qrcode_v2.py  6f9307456054_init.py  7d591dbb382d_init.py  a9103074cfaa_koyeb.py  bcc35f18a7e4_qrcode.py  f0e55cbd3497_qrcode_v3.py
config/: conection_config.py  conection_db.py  config.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
front/pages/: routes.py
front/templates/: base.html  login.html  registration.html
scr/database/: models.py
scr/services/: image_transform.py
src/: schemas.py
src/database/: connection.py  db.py  models.py
src/repository/: cloudinary.py  comments.py  image.py  qr.py  qr_code.py  token.py  token_blacklist.py  users.py
src/routes/: admin.py  auth.py  cloudinary.py  comments.py  image.py  qr.py  qr_routes.py  users.py
src/schemas/: cloudinary.py  comments.py  qr_schemas.py  users.py
src/services/: auth.py  cloudinary.py  email.py  image_transform.py  qr.py  qr_code.py  users.py
src/shemas/: contacts.py  users.py
tests/: Image.py  confest.py  conftest.py  image_test.py  test_connection_cloud_services.py  test_route_auth.py  test_route_contacts.py  test_route_main.py  test_route_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py  test_unit_service_cloudinary.py  test_unit_service_email.py
(+8 files in other folders)
