[tool.poetry]
name = "python-web-project"
version = "0.1.0"
description = ""
authors = ["Kagev <kaplitskiygv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
pytest = "^7.4.2"
fastapi-limiter = "^0.1.5"
uvicorn = {extras = ["standart"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
